Add cloud db fields to template.env

--- a/template.env
+++ b/template.env
@@ -1,2 +1,6 @@
 # Rename this file to simply ".env" and fill in the below variable with the scotus-analysis root dir (e.g. ~/src/scotus-analysis)
 PROJECT_PATH=
+
+DB_URL=
+DB_USERNAME=
+DB_PASSWORD=
