--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-networkx
-peewee
-numpy
-flask
-flask-cors
-psycopg2
-python-dotenv
-python-dateutil
-requests
-pdftotext
-scipy
-sklearn
-numpy
-git+git://github.com/legal-network/eyecite@master#egg=eyecite
+eyecite==2.3.0
+flask==1.1.2
+flask-cors==3.0.10
+matplotlib==3.5.1
+networkx==2.5.1
+numpy==1.20.2
+pdftotext==2.1.5
+peewee==3.14.4
+python-dotenv==0.19.2
+python_dateutil==2.8.2
+requests==2.25.1
+scikit_learn==1.0.1
+scipy==1.6.3
