--- a/alembic.ini
+++ b/alembic.ini
@@ -66,7 +66,7 @@ sqlalchemy.url = driver://user:pass@localhost/TO_BE_OVERRIDDEN
 
 # Logging configuration
 [loggers]
-keys = root,sqlalchemy,alembic
+keys = root,sqlalchemy,alembic,alembic_utils
 
 [handlers]
 keys = console
@@ -88,6 +88,11 @@ qualname = sqlalchemy.engine
 level = INFO
 handlers =
 qualname = alembic
+
+[logger_alembic_utils]
+level = INFO
+handlers =
+qualname = alembic_utils
 
 [handler_console]
 class = StreamHandler
