--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,7 @@ click==8.0.3
 BeautifulSoup4==4.10.0
 psycopg2==2.9.3
 BeautifulSoup4==4.10.0
+python-dateutil~=2.8.2
+setuptools~=49.2.1
+scikit-learn~=1.0.2
+csrgraph~=0.1.28
