--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ flask==1.1.2
 flask-cors==3.0.10
 matplotlib==3.5.1
 networkx==2.5.1
-numpy
+numpy==1.21.5
 pdftotext==2.2.2
 peewee==3.14.8
 python-dotenv==0.19.2
@@ -16,11 +16,10 @@ alembic==1.7.5
 alembic_utils==0.7.5
 sqlacodegen==2.3.0
 nodevectors==0.1.23
-gensim<4
+gensim<=3.8.2  # NumPy C API compatibility hell: https://stackoverflow.com/a/69528768
 click==8.0.3
 BeautifulSoup4==4.10.0
 psycopg2==2.9.3
-BeautifulSoup4==4.10.0
 python-dateutil~=2.8.2
 setuptools~=49.2.1
 scikit-learn~=1.0.2
