--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,7 @@ numpy==1.21.5
 pdftotext==2.2.2
 peewee==3.14.8
 python-dotenv==0.19.2
-python_dateutil==2.8.2
 requests==2.27.1
-scikit_learn
 scipy
 sqlalchemy==1.4.29
 alembic==1.7.5
@@ -26,3 +24,4 @@ scikit-learn~=1.0.2
 csrgraph~=0.1.28
 black~=22.1.0
 regex~=2022.1.18
+datasketch~=1.5.7
